Closed
Bug 723659
Opened 14 years ago
Closed 14 years ago
crash PresShell::DidDoReflow
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
mozilla13
People
(Reporter: jbecerra, Assigned: MatsPalmgren_bugz)
References
Details
(Keywords: crash, regression, reproducible, Whiteboard: [inbound])
Crash Data
Attachments
(1 file)
|
876 bytes,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.7; rv:13.0a1) Gecko/20120202 Firefox/13.0a1
This bug was filed from the Socorro interface and is
report bp-f212cc1e-cf04-485e-8bc9-86e5c2120202 .
=============================================================
I clicked on a video link within http://www.wingmancam.com/WingmanCam/Videos.html and the browser crashed immediately. Before that I had clicked on a video link in a different page (autoblog.com) without problems.
I have not been able to reproduce the problem, yet.
Comment 1•14 years ago
|
||
I just saw this tonight by:
1. Loading http://www.incapsula.com/
2. Clicking on Play Movie
3. Clicking the Play button
Build identifier: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.7; rv:13.0a1) Gecko/20120202 Firefox/13.0a1
https://crash-stats.mozilla.com/report/index/bp-7a934275-2a7e-4895-89a5-e93742120203
Comment 2•14 years ago
|
||
I can't reproduce it on Windows.
It first appeared in 13.0a1/20120202. The regression range is:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=e18c7bc2c28e&tochange=5b0900b3e71c
The first frames of the stack look like:
Frame Module Signature Source
0 XUL PresShell::DidDoReflow layout/base/nsPresShell.cpp:3945
1 XUL PresShell::ProcessReflowCommands layout/base/nsPresShell.cpp:7775
2 XUL PresShell::FlushPendingNotifications layout/base/nsPresShell.cpp:4111
3 XUL nsViewManager::CallWillPaintOnObservers view/src/nsViewManager.cpp:1383
4 XUL nsViewManager::DispatchEvent view/src/nsViewManager.cpp:777
5 XUL HandleEvent view/src/nsView.cpp:158
6 XUL nsChildView::DispatchEvent widget/cocoa/nsChildView.mm:1512
7 XUL nsChildView::DispatchWindowEvent widget/cocoa/nsChildView.mm:1522
8 XUL -[ChildView viewWillDraw] widget/cocoa/nsChildView.mm:2707
More report at:
https://crash-stats.mozilla.com/report/list?signature=PresShell%3A%3ADidDoReflow
Component: General → Layout
Keywords: regression,
reproducible
Product: Firefox → Core
QA Contact: general → layout
Hardware: All → x86_64
Comment 3•14 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/07edb8ba21b9 could be a culprit, given that it's plugin-related changes.
| Assignee | ||
Comment 4•14 years ago
|
||
I can reproduce the crash on OSX if I reload the page and repeat the STR in comment 1
a few times.
| Assignee | ||
Comment 5•14 years ago
|
||
Try results pending: https://tbpl.mozilla.org/?tree=Try&rev=f33250b29323
Assignee: nobody → matspal
Attachment #594137 -
Flags: review?(roc)
| Assignee | ||
Comment 6•14 years ago
|
||
Looks like the bug has been present since the nsObjectFrame reflow callback
was added in mozilla-2.0:
http://hg.mozilla.org/releases/mozilla-2.0/rev/be4524bc2416
Blocks: 556487
Attachment #594137 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 7•14 years ago
|
||
Whiteboard: [inbound]
Target Milestone: --- → mozilla13
Comment 8•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•