Bug 723659 - Cancel the reflow callback request when the frame is destroyed.  r=roc